# stonering

sr2/: AUTHORS  CMakeLists.txt  IDEAS  Makefile.am  README  Stone Ring.cbp  StoneRing2-vc10.sln  StoneRing2.sln  StoneRing2.vcproj  TODO  bootstrap.sh  config.h.in  configure.ac  configure.in  run.sh
sr2/Media/: animations.xml  battleConfig.xml  characterClasses.xml  init.steel  items.xml  mainmenu.xml  monsters.xml  resources.xml  skills.xml  spells.xml  statusEffects.xml  utilityScripts.xml
sr2/Media/Levels/: examplelevel.xml  foo.xml  level.dtd  monster_test.xml  test.xml  test2.xml  test3.xml  testlevel.xml  town2.xml
sr2/Media/Scripts/: functions.steel  init.steel
sr2/Media/Sprites/: wizard_evil2.xcf
sr2/Media/Tiles/: tiles.xml
sr2/SR2Lib/: SR2Lib.vcproj
sr2/StoneRing/StoneRing.xcodeproj/: project.pbxproj
sr2/src/: AbilityFactory.cpp  AbilityFactory.h  AbilityManager.cpp  AbilityManager.h  Animation.cpp  Animation.h  AppUtils.cpp  AppUtils.h  Application.cpp  Application.h  Character.cpp  Character.h  CharacterClass.cpp  CharacterClass.h  CharacterDefinition.h  CharacterFactory.cpp  CharacterFactory.h  ChoiceState.cpp  ChoiceState.h  Effect.h  Element.cpp  Element.h  GraphicsManager.cpp  GraphicsManager.h  IApplication.h  IFactory.h  IParty.h  Item.cpp  Item.h  ItemFactory.cpp  ItemFactory.h  ItemManager.cpp  ItemManager.h  ItemRef.h  Level.cpp  Level.h  LevelElements.cpp  LevelFactory.cpp  LevelFactory.h  Makefile.am  (+16 more)
sr2/src/LevelEditor/: EditableLevel.cpp  EditableLevel.h  EditorElementFactory.cpp  EditorElementFactory.h  EditorElements.cpp  EditorElements.h  GridPoint.cpp  GridPoint.h  Infobar.cpp  Infobar.h  LevelEditor.vcproj  Makefile.am  MapGrid.cpp  MapGrid.h  TileSelector.cpp  TileSelector.h  editor.cpp  editor.h  filedialog.h  filedialog_generic.cpp  test.cpp  treeitem.h  treenode.cpp  treenode.h  treenode_generic.cpp  treenode_generic.h  treeview.cpp
sr2/src/Media/: DEPRECATED_DIRECTORY
sr2/src/abilities/: AbilityManager.cpp  AbilityManager.h  Animation.cpp  Animation.h  Effect.h  Magic.cpp  Magic.h  Makefile.am  Makefile.in  Skill.cpp  Skill.h  Spell.cpp  Spell.h  SpellRef.cpp  SpellRef.h  StatusEffect.cpp  StatusEffect.h
sr2/src/battle/: ActionQueue.cpp  ActionQueue.h  AnimationState.cpp  AnimationState.h  BattleConfig.cpp  BattleConfig.h  Makefile.am  TargetingState.cpp  TargetingState.h
sr2/src/character/: BattleMenu.cpp  BattleMenu.h  BattleMenuOption.cpp  BattleMenuOption.h  Character.cpp  Character.h  CharacterClass.cpp  CharacterClass.h  CharacterDefinition.cpp  CharacterDefinition.h  CharacterManager.cpp  CharacterManager.h  ICharacter.h  ICharacterGroup.h  Makefile.am  Makefile.in  SpriteDefinition.cpp  SpriteDefinition.h
sr2/src/core/: Animation.cpp  Animation.h  AppUtils.cpp  AppUtils.h  AttributeModifier.cpp  AttributeModifier.h  Callback.h  Element.cpp  Element.h  Font.cpp  Font.h  GraphicsManager.cpp  GraphicsManager.h  IApplication.h  IParty.h  JoystickConfig.cpp  Makefile.am  Menu.cpp  Menu.h  MenuBox.cpp  MenuBox.h  MenuOption.cpp  MenuOption.h  NamedScript.cpp  NamedScript.h  SoundManager.cpp  SoundManager.h  SpriteRef.cpp  SpriteRef.h  StatusBox.cpp  StatusBox.h  SteelRunner.cpp  SteelRunner.h  Utilities.cpp  UtilityScripts.h  ZipFileProvider.cpp  ZipFileProvider.h  sr_defines.h
sr2/src/editor/: EditorState.cpp  EditorState.h  EditorTestState.cpp  EditorTestState.h  EventEditWindow.cpp  MOEditWindow.cpp  MOEditWindow.h  MOView.cpp  MOView.h  MapComponent.cpp  MapComponent.h  MapEditorState.cpp  MapEditorState.h  MapWindow.cpp  MapWindow.h  MonsterGroupEditWindow.cpp  MonsterRegionEditWindow.cpp  MonsterRegionEditWindow.h  Operation.cpp  Operation.h  ScriptEditWindow.cpp  ScriptEditWindow.h  TileEditor.cpp  TileEditor.h  TileSelector.cpp  TileSelector.h  TileSelectorWindow.cpp  TileSelectorWindow.h
sr2/src/factories/: AbilityFactory.cpp  AbilityFactory.h  CharacterFactory.cpp  CharacterFactory.h  ElementFactory.cpp  ElementFactory.h  IFactory.h  ItemFactory.cpp  ItemFactory.h  LevelFactory.cpp  LevelFactory.h  Makefile.am  Makefile.in
sr2/src/items/: AttributeEnhancer.cpp  AttributeEnhancer.h  DamageCategory.cpp  DamageCategory.h  Equipment.cpp  Equipment.h  IconRef.cpp  IconRef.h  Item.cpp  Item.h  ItemManager.cpp  ItemManager.h  ItemRef.cpp  ItemRef.h  Makefile.am  Makefile.in  NamedItem.cpp  NamedItem.h  Omega.cpp  Omega.h  RegularItem.cpp  RegularItem.h  Rune.cpp  Rune.h  RuneType.cpp  RuneType.h  SpecialItem.cpp  SpecialItem.h  StatusEffectModifier.cpp  StatusEffectModifier.h  SystemItem.cpp  SystemItem.h
sr2/src/level/: Action.h  Check.h  Condition.cpp  Condition.h  DebugTileVisitors.h  Direction.cpp  Direction.h  Event.cpp  Event.h  Graphic.h  Level.cpp  Level.h  LevelElements.cpp  Makefile.am  MappableObject.cpp  MappableObject.h  Navigator.cpp  Navigator.h  Node.hxx  ScriptElement.cpp  ScriptElement.h  Visitor.hxx
sr2/src/monsters/: Makefile.am  (+12 more)
steel/: AUTHORS  CMakeLists.txt  TODO  bootstrap_mac.sh  configure  configure.in
steel/Steel/: Steel.vcproj
steel/src/: Ast.cpp  Ast.h  AstVisitor.h  AuxVariables.cpp  AuxVariables.h  ByteCode.cpp  ByteCode.h  Compilation.cpp  Compilation.h  CompilationTypes.h  File.cpp  File.h  Functor.h  Makefile.am  Mutex.cpp  Mutex.h  SteelException.h  SteelFunctor.cpp  SteelFunctor.h  SteelInterpreter.cpp  SteelInterpreter.h  SteelParser.cpp  SteelParser.h  SteelScanner.bak.cpp  SteelScanner.cpp  SteelScanner.h  SteelType.cpp  SteelType.h  steel.cpp  steel.reflex  steel.trison  test_scanner.cpp
steel/test_scripts/: a.steel  anonymous.steel  array_print.steel  arrays.steel  closures.steel  dice.steel  errors.steel  factorial.steel  functor.steel  hash_lit.steel  hashes.steel  header.steel  hello.steel  logic.steel  mergesort.steel  namespaces.steel  one.steel  power.steel  push_pop.steel  require.steel  scope.steel  subexpr.steel  switch.steel  valid.steel  vtest.steel
trunk/sr2/: AUTHORS  IDEAS  Makefile.am  README  Stone Ring.cbp  StoneRing2.sln  StoneRing2.vcproj  TODO  bootstrap.sh  configure.in  run.sh  sr2.kdev4
trunk/steel/: Makefile.in  TODO  configure.in
(+883 files in other folders)
