#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(stonering, 0.0.0.0, dpalm@writeme.com)
AC_CONFIG_SRCDIR([src/Application.h])
#AC_CONFIG_HEADER([config.h])
AM_CONFIG_HEADER( config.h )
# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_MAKE_SET
AM_INIT_AUTOMAKE( stonering, 0.0.0.0)
AM_MAINTAINER_MODE
# Checks for libraries.


PKG_CHECK_MODULES(CLANLIB, clanCore-0.7 clanApp-0.7 clanDisplay-0.7 clanGL-0.7 clanSound-0.7 clanGUI-0.7 clanGUIStyleSilver-0.7)

AC_SUBST(CLANLIB_LIBS) 
AC_SUBST(CLANLIB_CFLAGS)


# Check for debug or release
AC_ARG_WITH(debug,[--with-debug=true enables debug build],
				     [debugmode=$withval],	
				     [debugmode=false]
)

case $debugmode in
     true)
     CPPFLAGS="-g -O0 -DDEBUG" ;;
     false | *)
     CPPFLAGS="-DNDEBUG -O2" ;;
esac


				     
# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
AC_OUTPUT(Makefile \
		   src/Makefile \
		   src/LevelEditor/Makefile
)
