#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(stonering, 0.0.0.1)
AC_CONFIG_SRCDIR(src/Application.cpp)
AM_INIT_AUTOMAKE

#AC_CONFIG_HEADER([config.h])
AM_CONFIG_HEADER( config.h )
# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_DISABLE_SHARED
AC_PROG_LIBTOOL
AC_PROG_MAKE_SET
		


# AM_MAINTAINER_MODE
# Checks for libraries.
AC_CHECK_LIB(steel,main)


#PKG_CHECK_MODULES(CLANLIB, clanCore-2.1 clanApp-2.1 clanDisplay-2.1 clanGL-2.1 clanSound-2.1 clanGUI-2.1)
PKG_CHECK_MODULES(CLANLIB, clanCore-2.3 clanApp-2.3 clanDisplay-2.3 clanGL-2.3 clanSound-2.3 clanGUI-2.3 clanVorbis-2.3)

AC_SUBST(CLANLIB_LIBS) 
AC_SUBST(CLANLIB_CFLAGS)


# Check for debug or release
AC_ARG_ENABLE(debug,[--enable-debug enables debug build],
				     [debugmode=$enableval],	
				     [debugmode=false]
)

if test "$debugmode" != false 
then
     CXXFLAGS="${CXXFLAGS} -g3 -O0 -DDEBUG"
     AC_MSG_RESULT(on)
else
     CXXFLAGS="${CXXFLAGS} -DNDEBUG -O3" 
     AC_MSG_RESULT(off)
fi

AC_ARG_ENABLE(gprof,
[       --enable-gprof          enable profiling with gprof],
gprof=$enableval,gprof=no)
if test "$gprof" != no
then
    CFLAGS="-pg $CFLAGS"
    CPPFLAGS="-pg $CPPFLAGS"
    CXXFLAGS="-pg $CXXFLAGS"
    AC_CHECK_LIB(gmon, main,[LIBS="$LIBS -lgmon"])
    AC_MSG_RESULT(enabled)
else
    AC_MSG_RESULT(no)
fi
				     
# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
AC_OUTPUT(Makefile)
