noinst_LTLIBRARIES = libfactories.la

libfactories_la_CPPFLAGS = $(CLANLIB_CFLAGS) $(CPPFLAGS)
libfactories_la_SOURCES = \
	AbilityFactory.cpp \
	AbilityFactory.h \
	CharacterFactory.cpp \
	CharacterFactory.h \
	IFactory.h \
	ItemFactory.cpp \
	ItemFactory.h \
	LevelFactory.cpp \
	LevelFactory.h 


INCLUDES = 	-I@top_srcdir@/src/ \
		-I@top_srcdir@/src/abilities \
		-I@top_srcdir@/src/party \
		-I@top_srcdir@/src/items \
		-I@top_srcdir@/src/items/weapons \
		-I@top_srcdir@/src/items/armor \
		-I@top_srcdir@/src/level \
		-I@top_srcdir@/src/level/actions \
		-I@top_srcdir@/src/level/checks \
		-I@top_srcdir@/src/character \
		-I@top_srcdir@/src/core

