noinst_LTLIBRARIES = libitems.la

libitems_la_CPPFLAGS = $(CLANLIB_CFLAGS) $(CPPFLAGS)

libitems_la_SOURCES = \
Item.cpp \
Item.h \
ItemManager.cpp \
ItemManager.h \
ItemRef.h 


INCLUDES = 	-I@top_srcdir@/src/ \
		-I@top_srcdir@/src/abilities \
		-I@top_srcdir@/src/party \
		-I@top_srcdir@/src/factories \
		-I@top_srcdir@/src/level \
		-I@top_srcdir@/src/character
