noinst_LTLIBRARIES = libitems.la

libitems_la_CPPFLAGS = $(CLANLIB_CFLAGS) $(CPPFLAGS)

libitems_la_SOURCES = \
DamageCategory.cpp \
DamageCategory.h \
Equipment.cpp \
Equipment.h \
IconRef.cpp \
IconRef.h \
Item.cpp \
Item.h \
ItemManager.cpp \
ItemManager.h \
ItemRef.h \
ItemRef.cpp \
NamedItem.cpp \
NamedItem.h \
RegularItem.cpp \
RegularItem.h \
Rune.cpp \
Rune.h \
RuneType.cpp \
RuneType.h \
SpecialItem.cpp \
SpecialItem.h \
StatusEffectModifier.cpp \
StatusEffectModifier.h \
SystemItem.cpp \
SystemItem.h \
weapons/GeneratedWeapon.cpp \
weapons/GeneratedWeapon.h \
weapons/UniqueWeapon.cpp \
weapons/UniqueWeapon.h \
weapons/WeaponClass.cpp \
weapons/WeaponClass.h \
weapons/WeaponClassRef.cpp \
weapons/WeaponClassRef.h \
weapons/Weapon.cpp \
weapons/WeaponEnhancer.cpp \
weapons/WeaponEnhancer.h \
weapons/Weapon.h \
weapons/WeaponRef.cpp \
weapons/WeaponRef.h \
weapons/WeaponType.cpp \
weapons/WeaponTypeExclusionList.cpp \
weapons/WeaponTypeExclusionList.h \
weapons/WeaponType.h \
weapons/WeaponTypeRef.cpp \
weapons/WeaponTypeRef.h \
armor/ArmorClass.cpp \
armor/ArmorClass.h \
armor/ArmorClassRef.cpp \
armor/ArmorClassRef.h \
armor/Armor.cpp \
armor/ArmorEnhancer.cpp \
armor/ArmorEnhancer.h \
armor/Armor.h \
armor/ArmorRef.cpp \
armor/ArmorRef.h \
armor/ArmorType.cpp \
armor/ArmorTypeExclusionList.cpp \
armor/ArmorTypeExclusionList.h \
armor/ArmorType.h \
armor/ArmorTypeRef.cpp \
armor/ArmorTypeRef.h \
armor/GeneratedArmor.cpp \
armor/GeneratedArmor.h \
armor/UniqueArmor.cpp \
armor/UniqueArmor.h 

INCLUDES = 	-I@top_srcdir@/src/ \
		-I@top_srcdir@/src/abilities \
		-I@top_srcdir@/src/party \
		-I@top_srcdir@/src/factories \
		-I@top_srcdir@/src/level \
		-I@top_srcdir@/src/character \
		-I@top_srcdir@/src/monsters \
		-I@top_srcdir@/src/items/weapons \
		-I@top_srcdir@/src/items/armor \
		-I@top_srcdir@/src/steel \
		-I@top_srcdir@/src/core/ 
