noinst_LTLIBRARIES = liblevel.la

liblevel_la_CPPFLAGS = $(CLANLIB_CFLAGS) $(CPPFLAGS)

liblevel_la_SOURCES = \
		Action.h \
		Check.h \
		Condition.cpp \
		Condition.h \
		Event.cpp \
		Event.h \
		Graphic.h \
		Level.cpp \
		LevelElements.cpp \
		Level.h \
		MappableObject.cpp \
		MappableObject.h \
		actions/Actions.h \
		actions/AddCharacter.h \
		actions/AttributeModifier.cpp \
		actions/AttributeModifier.h \
		actions/Choice.cpp \
		actions/Choice.h \
		actions/Give.cpp \
		actions/GiveGold.cpp \
		actions/GiveGold.h \
		actions/Give.h \
		actions/InvokeShop.cpp \
		actions/InvokeShop.h \
		actions/LoadLevel.cpp \
		actions/LoadLevel.h \
		actions/Pause.cpp \
		actions/Pause.h \
		actions/PlayScene.cpp \
		actions/PlayScene.h \
		actions/PlaySound.cpp \
		actions/PlaySound.h \
		actions/Pop.cpp \
		actions/Pop.h \
		actions/RemoveCharacter.h \
		actions/Say.cpp \
		actions/Say.h \
		actions/StartBattle.cpp \
		actions/StartBattle.h \
		actions/Take.cpp \
		actions/Take.h \
		checks/And.cpp \
		checks/And.h \
		checks/Checks.h \
		checks/DidEvent.cpp \
		checks/DidEvent.h \
		checks/HasGold.cpp \
		checks/HasGold.h \
		checks/HasItem.cpp \
		checks/HasItem.h \
		checks/Operator.cpp \
		checks/Operator.h \
		checks/Or.cpp \
		checks/Or.h 

INCLUDES = 	-I@top_srcdir@/src/ \
		-I@top_srcdir@/src/abilities \
		-I@top_srcdir@/src/party \
		-I@top_srcdir@/src/factories \
		-I@top_srcdir@/src/items \
		-I@top_srcdir@/src/items/weapons \
		-I@top_srcdir@/src/items/armor \
		-I@top_srcdir@/src/level \
		-I@top_srcdir@/src/level/actions \
		-I@top_srcdir@/src/level/checks \
		-I@top_srcdir@/src/character

