noinst_LTLIBRARIES = libmonsters.la

libmonsters_la_CPPFLAGS = $(CLANLIB_CFLAGS) $(CPPFLAGS)

libmonsters_la_SOURCES = \
	Monster.cpp \
	Monster.h \
	MonsterRegion.h \		
	MonsterRegion.cpp \	
	MonsterRef.h \
	MonsterRef.cpp \
	MonsterGroup.h \
	MonsterGroup.cpp \
	MonsterElement.cpp \
	MonsterElement.h \
	Stat.cpp \
	Stat.h



INCLUDES = 	-I@top_srcdir@/src/ \
		-I@top_srcdir@/src/abilities \
		-I@top_srcdir@/src/character \
		-I@top_srcdir@/src/party \
		-I@top_srcdir@/src/items \
		-I@top_srcdir@/src/items/weapons \
		-I@top_srcdir@/src/items/armor \
		-I@top_srcdir@/src/level \
		-I@top_srcdir@/src/factories \
		-I@top_srcdir@/src/steel \
		-I@top_srcdir@/src/core


