noinst_LTLIBRARIES = libbattle.la

libbattle_la_CPPFLAGS = $(CLANLIB_CFLAGS) $(CPPFLAGS)

libbattle_la_SOURCES = \
ActionQueue.h \
ActionQueue.cpp


INCLUDES = 	-I@top_srcdir@/src/ \
		-I@top_srcdir@/src/abilities \
		-I@top_srcdir@/src/party \
		-I@top_srcdir@/src/items \
		-I@top_srcdir@/src/battle \
		-I@top_srcdir@/src/items/weapons \
		-I@top_srcdir@/src/items/armor \
		-I@top_srcdir@/src/level \
		-I@top_srcdir@/src/factories \
		-I@top_srcdir@/src/steel \
		-I@top_srcdir@/src/core

