noinst_LTLIBRARIES = libcharacter.la

libcharacter_la_CPPFLAGS = $(CLANLIB_CFLAGS) $(CPPFLAGS)

libcharacter_la_SOURCES = \
BattleMenu.cpp \
BattleMenu.h \
BattleMenuOption.cpp \
BattleMenuOption.h \
CharacterClass.cpp \
CharacterClass.h \
Character.cpp \
Character.h \
CharacterManager.h \
CharacterManager.cpp \
SpriteDefinition.cpp \
SpriteDefinition.h \
ICharacter.h



INCLUDES = 	-I@top_srcdir@/src/ \
		-I@top_srcdir@/src/abilities \
		-I@top_srcdir@/src/party \
		-I@top_srcdir@/src/items \
		-I@top_srcdir@/src/items/weapons \
		-I@top_srcdir@/src/items/armor \
		-I@top_srcdir@/src/level \
		-I@top_srcdir@/src/factories \
		-I@top_srcdir@/src/monsters \
		-I@top_srcdir@/src/battle \
		-I@top_srcdir@/src/steel \
		-I@top_srcdir@/src/core


