noinst_LTLIBRARIES = libcore.la

libcore_la_CPPFLAGS =  $(CLANLIB_CFLAGS) $(CPPFLAGS)

libcore_la_SOURCES =	\
		Animation.cpp \
		Animation.h \
		AppUtils.cpp \
		AppUtils.h \
		Element.cpp \
		Element.h \
		GraphicsManager.cpp \
		GraphicsManager.h \
		NamedScript.cpp \
		NamedScript.h \
		IApplication.h \
		IParty.h \
		sr_defines.h \
		Utilities.cpp 

INCLUDES = \
		-I@top_srcdir@/src/	\
		-I@top_srcdir@/src/states/ \
		-I@top_srcdir@/src/level/  \
		-I@top_srcdir@/src/party/ \
		-I@top_srcdir@/src/factories \
		-I@top_srcdir@/src/items \
		-I@top_srcdir@/src/items/weapons \
		-I@top_srcdir@/src/items/armor \
		-I@top_srcdir@/src/character \
		-I@top_srcdir@/src/abilities \
		-I@top_srcdir@/src/steel
