noinst_LTLIBRARIES = liblevel.la

liblevel_la_CPPFLAGS = $(CLANLIB_CFLAGS) $(CPPFLAGS)

liblevel_la_SOURCES = \
		Level.cpp \
		LevelElements.cpp \
		Level.h \
		MappableObject.cpp 

INCLUDES = 	-I@top_srcdir@/src/ \
		-I@top_srcdir@/src/abilities \
		-I@top_srcdir@/src/party \
		-I@top_srcdir@/src/factories \
		-I@top_srcdir@/src/items \
		-I@top_srcdir@/src/character

